<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/warning"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Desea eliminar al Cliente"
        android:textSize="22sp" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_delete_no"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_high"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/dialog_delete_yes"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/yes_high"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</LinearLayout>