<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/retrofit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retrofit_title_toolbar"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:text="@string/retrofit"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/retrofit_help"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_info"
                android:contentDescription="@string/information" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/retrofit_toolbar"
        android:orientation="vertical">

        <Button
            android:id="@+id/retrofit_button_example_one"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/example_one"
            android:background="@drawable/rounded_corners_edge_blue"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="70dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>

</RelativeLayout>