<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="FRAGMENTS"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/fragment_help"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_info"
                android:contentDescription="@string/information" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/button_show_fragment_one"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/fragment_button_one"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_corners_edge_blue_background_white" />

    <Button
        android:id="@+id/button_show_fragment_two"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/fragment_button_two"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_corners_edge_blue_background_white" />

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>