<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/async_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/async_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retrofit_title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/async_task"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/retrofit_help"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_info"
                android:contentDescription="@string/information" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/async_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/async_toolbar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/countdown_async"
        android:layout_below="@id/async_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/button_container_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countdown_async"
        android:layout_marginTop="20dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/information_button"
        android:layout_width="match_parent"
        android:text="@string/async_button_information"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/button_container_async"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp" />

</RelativeLayout>